--- a/PlantAlarm/AppShell.xaml
+++ b/PlantAlarm/AppShell.xaml
@@ -3,17 +3,22 @@
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
        x:Class="PlantAlarm.AppShell"
        xmlns:pages="clr-namespace:PlantAlarm.Views">
-    <TabBar>
-        <Tab Title="Today">
+    <TabBar Shell.NavBarIsVisible="false" Shell.TabBarTitleColor="#FFFFFF" Shell.TabBarUnselectedColor="#88FFFFFF">
+        <Tab Title="Today" Shell.TabBarBackgroundColor="#73B5DD" Shell.BackgroundColor="#73B5DD" Icon="TodayPageIcon.png" >
             <pages:TodayPage />
         </Tab>
-        <Tab Title="Plants">
-            <pages:PlantsPage />
+        <Tab Title="Garden" Shell.TabBarBackgroundColor="#37C72A" Icon="GardenPageIcon.png">
+            <ShellContent Title="Plants" >
+                <pages:PlantsPage />
+            </ShellContent>
+            <ShellContent Title="Accessories">
+                <pages:AccessoriesPage />
+            </ShellContent>
         </Tab>
-        <Tab Title="Keep-alives">
-            <pages:AccessoriesPage />
+        <Tab Title="Activities" Shell.TabBarBackgroundColor="#FDA600" Shell.BackgroundColor="#FDA600" Icon="ActivitiesPageIcon.png">
+            <pages:ActivitiesPage />
         </Tab>
-        <Tab Title="Settings">
+        <Tab Title="Settings" Shell.TabBarBackgroundColor="#E33942" Shell.BackgroundColor="#E33942" Icon="SettingsPageIcon.png">
             <pages:SettingsPage />
         </Tab>
     </TabBar>
