continuing to implement New PlantTask page

--- a/PlantAlarm/AppShell.xaml
+++ b/PlantAlarm/AppShell.xaml
@@ -3,12 +3,12 @@
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
        x:Class="PlantAlarm.AppShell"
        xmlns:pages="clr-namespace:PlantAlarm.Views">
-    <TabBar Shell.NavBarIsVisible="false" Shell.TabBarTitleColor="#FFFFFF" Shell.TabBarUnselectedColor="#88FFFFFF">
+    <TabBar Shell.TabBarTitleColor="#FFFFFF" Shell.TabBarUnselectedColor="#88FFFFFF">
         <Tab Title="Today" Shell.TabBarBackgroundColor="#73B5DD" Shell.BackgroundColor="#73B5DD" Icon="TodayPageIcon.png" >
             <pages:TodayPage />
         </Tab>
-        <Tab Title="Garden" Shell.TabBarBackgroundColor="#37C72A" Icon="GardenPageIcon.png">
-            <ShellContent Title="Plants" >
+        <Tab Title="Garden" Shell.TabBarBackgroundColor="#37C72A" Shell.BackgroundColor="#37C72A" Icon="GardenPageIcon.png">
+            <ShellContent Title="Plants">
                 <pages:PlantsPage />
             </ShellContent>
             <ShellContent Title="Accessories">
@@ -16,9 +16,9 @@
             </ShellContent>
         </Tab>
         <Tab Title="Activities" Shell.TabBarBackgroundColor="#FDA600" Shell.BackgroundColor="#FDA600" Icon="ActivitiesPageIcon.png">
-            <pages:ActivitiesPage />
+            <pages:NewTaskPage />
         </Tab>
-        <Tab Title="Settings" Shell.TabBarBackgroundColor="#E33942" Shell.BackgroundColor="#E33942" Icon="SettingsPageIcon.png">
+        <Tab Title="Settings" Shell.TabBarBackgroundColor="#E33942" Shell.BackgroundColor="#E33942" Icon="SettingsPageIcon.png" >
             <pages:SettingsPage />
         </Tab>
     </TabBar>
