--- a/PlantAlarm/Views/NewPlantPage.xaml
+++ b/PlantAlarm/Views/NewPlantPage.xaml
@@ -2,49 +2,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlantAlarm.Views.NewPlantPage"
-             Title="New Plant">
+             xmlns:customControls="clr-namespace:PlantAlarm.CustomControls">
     <ContentPage.Content>
-        <StackLayout>
-            <TableView Intent="Form" >
+        <ScrollView>
+            <TableView Intent="Form" HasUnevenRows="true">
                 <TableSection>
-                    <EntryCell Label="Name" />
-                </TableSection>
-                <TableSection>
-                    <SwitchCell Text="Recurring" x:Name="RecurringSwitchCell" OnChanged="IsRepeatingChanged" />
-                </TableSection>
-                
-                <!-- Should show when not recurring -->
-                <TableSection Title="Only occurrence">
-                    <ViewCell>
-                        <StackLayout Orientation="Horizontal" Margin="15,0,0,0">
-                            <Label VerticalOptions="Center" Text="Date" HorizontalOptions="StartAndExpand"/>
-                            <DatePicker x:Name="OneTimeDatePicker" HorizontalOptions="End" />
-                        </StackLayout>
-                    </ViewCell>
-                    <ViewCell>
-                        <StackLayout Orientation="Horizontal" Margin="15,0,0,0">
-                            <Label VerticalOptions="Center" Text="Time" HorizontalOptions="StartAndExpand"/>
-                            <TimePicker x:Name="OneTimeTimePicker" HorizontalOptions="End" />
-                        </StackLayout>
-                    </ViewCell>
-                </TableSection>
-                
-                <!-- Should show when recurring -->
-                <TableSection Title="First occurrence">
-                    <ViewCell>
-                        <StackLayout Orientation="Horizontal" Margin="15,0,0,0">
-                            <Label VerticalOptions="Center" Text="Date" HorizontalOptions="StartAndExpand"/>
-                            <DatePicker x:Name="OneTimeDatePicker" HorizontalOptions="End" />
-                        </StackLayout>
-                    </ViewCell>
-                    <ViewCell>
-                        <StackLayout Orientation="Horizontal" Margin="15,0,0,0">
-                            <Label VerticalOptions="Center" Text="Time" HorizontalOptions="StartAndExpand"/>
-                            <TimePicker x:Name="OneTimeTimePicker" HorizontalOptions="End" />
-                        </StackLayout>
-                    </ViewCell>
+                    <EntryCell Height="44" Label="Name" />
                 </TableSection>
             </TableView>
-        </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
