messing around with the calendarview

--- a/PlantAlarm/Views/NewTaskPage.xaml
+++ b/PlantAlarm/Views/NewTaskPage.xaml
@@ -96,7 +96,7 @@
                     </ViewCell>
                     <ViewCell>
                         <StackLayout>
-                            <ListView ItemsSource="">
+                            <ListView>
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <ViewCell>
