--- a/PlantAlarm/AppShell.xaml
+++ b/PlantAlarm/AppShell.xaml
@@ -5,21 +5,17 @@
        xmlns:pages="clr-namespace:PlantAlarm.Views">
     <TabBar Shell.TabBarTitleColor="#FFFFFF" Shell.TabBarUnselectedColor="#88FFFFFF">
         <Tab Title="Today" Shell.TabBarBackgroundColor="#73B5DD" Shell.BackgroundColor="#73B5DD" Icon="TodayPageIcon.png" >
-            <pages:TodayPage />
+            <ShellContent ContentTemplate="{DataTemplate pages:TodayPage}" />
         </Tab>
         <Tab Title="Garden" Shell.TabBarBackgroundColor="#37C72A" Shell.BackgroundColor="#37C72A" Icon="GardenPageIcon.png">
-            <ShellContent Title="Plants">
-                <pages:PlantsPage />
-            </ShellContent>
-            <ShellContent Title="Accessories">
-                <pages:AccessoriesPage />
-            </ShellContent>
+            <ShellContent Title="Plants" ContentTemplate="{DataTemplate pages:PlantsPage}" />
+            <ShellContent Title="Accessories" ContentTemplate="{DataTemplate pages:AccessoriesPage}" />
         </Tab>
-        <Tab Title="Activities" Shell.TabBarBackgroundColor="#FDA600" Shell.BackgroundColor="#FDA600" Icon="ActivitiesPageIcon.png">
-            <pages:NewTaskPage />
+        <Tab Title="Tasks" Shell.TabBarBackgroundColor="#FDA600" Shell.BackgroundColor="#FDA600" Icon="ActivitiesPageIcon.png">
+            <ShellContent ContentTemplate="{DataTemplate pages:TasksPage}" />
         </Tab>
         <Tab Title="Settings" Shell.TabBarBackgroundColor="#E33942" Shell.BackgroundColor="#E33942" Icon="SettingsPageIcon.png" >
-            <pages:SettingsPage />
+            <ShellContent ContentTemplate="{DataTemplate pages:SettingsPage}" />
         </Tab>
     </TabBar>
 </Shell>
