--- a/PlantAlarm/Views/AccessoriesPage.xaml
+++ b/PlantAlarm/Views/AccessoriesPage.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlantAlarm.Views.AccessoriesPage"
              Title="Garden">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="New item" />
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
     </ContentPage.Content>
 </ContentPage>
