--- a/PlantAlarm/Views/CategorySelectorPage.xaml
+++ b/PlantAlarm/Views/CategorySelectorPage.xaml
@@ -1,36 +1,48 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
-             x:Class="PlantAlarm.Views.CategorySelectorPage">
+             x:Class="PlantAlarm.Views.CategorySelectorPage"
+             xmlns:controls="clr-namespace:PlantAlarm.CustomControls"
+             Title="Select categories"
+             Appearing="Handle_Appearing">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Done" Command="{Binding AddCategoriesCommand}" />
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
             <SearchBar Placeholder="Search for categories..." SearchCommand="{Binding SearchCategoriesCommand}" x:Name="SearchBar"
                        SearchCommandParameter="{Binding Text, Source={x:Reference SearchBar}}" />
-            <ListView ItemsSource="{Binding Categories}" HasUnevenRows="true" ItemTapped="CategoryTapped">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <StackLayout>
-                                <StackLayout Orientation="Horizontal">
-                                    <Label Text="{Binding PlantCategory.Name}" />
+            <Grid>
+                <CollectionView ItemsSource="{Binding Categories}">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <StackLayout>
+                                    <StackLayout Orientation="Horizontal">
+                                        <Label Text="{Binding PlantCategory.Name}" VerticalOptions="Center" />
+                                        <BoxView HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="Silver" />
+                                    </StackLayout>
+                                    <!-- POSSIBLE UPGRADE TO SHOW ELEMENTS OF CATEGORY
+                                    <Grid Margin="10,0,0,0" IsVisible="{Binding IsExpanded}">
+                                        <ListView ItemsSource="{Binding PlantsOfCategory}" >
+                                            <ListView.ItemTemplate>
+                                                <DataTemplate>
+                                                    <StackLayout Margin="5,0,0,5" Orientation="Horizontal">
+                                                        <Image Source="{Binding PhotoOfPlant.Url}" />
+                                                        <Label Text="{Binding Plant.Name}" />
+                                                    </StackLayout>
+                                                </DataTemplate>
+                                            </ListView.ItemTemplate>
+                                        </ListView>
+                                    </Grid>-->
                                 </StackLayout>
-                                <Grid Margin="10,0,0,0" IsVisible="{Binding IsExpanded}">
-                                    <ListView ItemsSource="{Binding PlantsOfCategory}" >
-                                        <ListView.ItemTemplate>
-                                            <DataTemplate>
-                                                <StackLayout Margin="5,0,0,5" Orientation="Horizontal">
-                                                    <Image Source="{Binding PhotoOfPlant.Url}" />
-                                                    <Label Text="{Binding Plant.Name}" />
-                                                </StackLayout>
-                                            </DataTemplate>
-                                        </ListView.ItemTemplate>
-                                    </ListView>
-                                </Grid>
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+                            </ViewCell>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+                <controls:AddButton HorizontalOptions="End" VerticalOptions="End" Margin="0,0,20,60" 
+                                    TouchedCommand="{Binding AddCategoryCommand}"/>
+            </Grid>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
