--- a/PlantAlarm/Views/CategorySelectorPage.xaml
+++ b/PlantAlarm/Views/CategorySelectorPage.xaml
@@ -6,28 +6,53 @@
              Title="Select categories"
              Appearing="Handle_Appearing">
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Done" Command="{Binding AddCategoriesCommand}" />
+        <ToolbarItem Text="Done"  Command="{Binding AddCategoriesCommand}" />
     </ContentPage.ToolbarItems>
+    <ContentPage.Resources>
+        <Style TargetType="StackLayout">
+            <Setter Property="VisualStateManager.VisualStateGroups">
+                <VisualStateGroupList>
+                    <VisualStateGroup x:Name="CommonStates">
+                        <VisualState x:Name="Normal" />
+                        <VisualState x:Name="Selected">
+                            <VisualState.Setters>
+                                <Setter Property="BackgroundColor"
+                                        Value="White" />
+                            </VisualState.Setters>
+                        </VisualState>
+                    </VisualStateGroup>
+                </VisualStateGroupList>
+            </Setter>
+        </Style>
+    </ContentPage.Resources>
     <ContentPage.Content>
-        <StackLayout Margin="0,80,0,0">
-            <SearchBar Placeholder="Search for categories..." SearchCommand="{Binding SearchCategoriesCommand}" x:Name="SearchBar"
-                       SearchCommandParameter="{Binding Text, Source={x:Reference SearchBar}}" />
-            <Grid>
-                <CollectionView ItemsSource="{Binding Categories}" ItemSizingStrategy="MeasureFirstItem">
-                    <CollectionView.ItemTemplate>
-                        <DataTemplate>
-                            <StackLayout>
-                                <StackLayout Orientation="Horizontal">
-                                    <Label Text="{Binding PlantCategory.Name}" VerticalOptions="Center" />
-                                    <BoxView HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="Silver" />
+        <Grid>
+            <ScrollView>
+                <StackLayout VerticalOptions="Fill">
+                    <SearchBar Placeholder="Search for categories..." SearchCommand="{Binding SearchCategoriesCommand}" x:Name="SearchBar"
+                           SearchCommandParameter="{Binding Source={x:Reference SearchBar}, Path=Value}" Margin="0,0,0,-6"/>
+                    <CollectionView ItemsSource="{Binding Categories}" ItemSizingStrategy="MeasureFirstItem" x:Name="CategoryColView"
+                                                 SelectionMode="Multiple" SelectionChangedCommand="{Binding SelectionChangedCommand}" 
+                                                 SelectionChangedCommandParameter="{Binding 
+                                                    Source={x:Reference CategoryColView}, Path=SelectedItems}">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <StackLayout Orientation="Vertical" HeightRequest="44">
+                                    <BoxView HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="White" VerticalOptions="Start"/>
+                                    <StackLayout Orientation="Horizontal" Margin="10,0,10,0" VerticalOptions="FillAndExpand">
+                                        <Label Text="{Binding PlantCategory.Name}" VerticalOptions="Center" HorizontalOptions="StartAndExpand"/>
+                                        <Image Source="GreenDoneIcon.png" HorizontalOptions="End" IsVisible="{Binding IsSelected}" 
+                                               VerticalOptions="Center" HeightRequest="15"/>
+                                    </StackLayout>
+                                    <BoxView HeightRequest="1" HorizontalOptions="Fill" BackgroundColor="Gainsboro" VerticalOptions="End"/>
                                 </StackLayout>
-                            </StackLayout>
-                        </DataTemplate>
-                    </CollectionView.ItemTemplate>
-                </CollectionView>
-                <controls:AddButton HorizontalOptions="End" VerticalOptions="End" Margin="0,0,20,60" 
-                                    TouchedCommand="{Binding AddCategoryCommand}"/>
-            </Grid>
-        </StackLayout>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+                </StackLayout>
+            </ScrollView>
+            <controls:AddButton HorizontalOptions="End" VerticalOptions="End" Margin="0,0,20,60" 
+                                TouchedCommand="{Binding AddCategoryCommand}"/>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
